extracting .tar.gz file

--- a/GC.ipynb
+++ b/GC.ipynb
@@ -16,10 +16,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import tarfile\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extract GZ file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_tar_gz_file  = 'cv-corpus-18.0-delta-2024-06-14-fa.tar.gz'\n",
+    "output_dir  = 'extracted_files'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the output folder if it doesn't exist\n",
+    "os.makedirs(output_dir , exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Open the .tar.gz file\n",
+    "with tarfile.open(input_tar_gz_file, 'r:gz') as tar:\n",
+    "    # Extract all contents to the output directory\n",
+    "    tar.extractall(path=output_dir)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -36,7 +78,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.3"
   }
  },
