--- a/GC.ipynb
+++ b/GC.ipynb
@@ -16,34 +16,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tarfile\n",
-    "import os"
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extract GZ file"
+    "## Extract .tar.gz file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_tar_gz_file  = 'cv-corpus-18.0-delta-2024-06-14-fa.tar.gz'\n",
+    "input_tar_gz_file  = 'cv-corpus-12.0-delta-2022-12-07-en.tar.gz'\n",
     "output_dir  = 'extracted_files'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,14 +55,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Open the .tar.gz file\n",
     "with tarfile.open(input_tar_gz_file, 'r:gz') as tar:\n",
-    "    # Extract all contents to the output directory\n",
     "    tar.extractall(path=output_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Open Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('./extracted_files/cv-corpus-12.0-delta-2022-12-07/en/other.tsv', sep='\\t')\n",
+    "df = df[df['gender'].isin(['male', 'female'])]\n",
+    "filtered_df = df[['path', 'gender']]"
    ]
   },
   {
@@ -69,6 +88,13 @@
    "source": [
     "## rest"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
