filter data via gender and have numerical labels

--- a/GC.ipynb
+++ b/GC.ipynb
@@ -73,13 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('./extracted_files/cv-corpus-12.0-delta-2022-12-07/en/other.tsv', sep='\\t')\n",
     "df = df[df['gender'].isin(['male', 'female'])]\n",
-    "filtered_df = df[['path', 'gender']]"
+    "filtered_df = df[['path', 'gender']]\n",
+    "filtered_df.loc[:, 'gender'] = filtered_df['gender'].map({'male': 1, 'female': 0})"
    ]
   },
   {
