Add gaussian noise to femaile data  for data augmentation

--- a/GC.ipynb
+++ b/GC.ipynb
@@ -16,14 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tarfile\n",
     "import os\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import librosa\n",
+    "import matplotlib.pyplot as plt\n",
+    "import soundfile as sf"
    ]
   },
   {
@@ -87,15 +90,171 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## rest"
+    "## Add gaussian noise for data augmentation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def add_gaussian_noise(signal, noise_level=0.005):\n",
+    "    \"\"\"Add Gaussian noise to the signal\"\"\"\n",
+    "    noise = np.random.normal(0, noise_level, len(signal))\n",
+    "    return signal + noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sound_dir = './extracted_files/cv-corpus-12.0-delta-2022-12-07/en/clips'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, row in filtered_df[filtered_df['gender'] == 0].iterrows():\n",
+    "    \n",
+    "    waveform, sr = librosa.load(f'{sound_dir}/{row['path']}')\n",
+    "    noisy = add_gaussian_noise(waveform)\n",
+    "\n",
+    "    sf.write(f'{sound_dir}/noisy_{row['path'].split('.')[0]}.wav', noisy, sr)\n",
+    "\n",
+    "    new_row = pd.DataFrame({'path': [f'noisy_{row['path'].split('.')[0]}.wav'], 'gender': [0]})\n",
+    "\n",
+    "    filtered_df = pd.concat([filtered_df, new_row], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>path</th>\n",
+       "      <th>gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>common_voice_en_34925857.mp3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>common_voice_en_34925861.mp3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>common_voice_en_34925867.mp3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>common_voice_en_34925868.mp3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>common_voice_en_34925869.mp3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28042</th>\n",
+       "      <td>noisy_common_voice_en_36528129.wav</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28043</th>\n",
+       "      <td>noisy_common_voice_en_36528130.wav</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28044</th>\n",
+       "      <td>noisy_common_voice_en_36528131.wav</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28045</th>\n",
+       "      <td>noisy_common_voice_en_36528132.wav</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28046</th>\n",
+       "      <td>noisy_common_voice_en_36528133.wav</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>28047 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     path gender\n",
+       "0            common_voice_en_34925857.mp3      0\n",
+       "1            common_voice_en_34925861.mp3      0\n",
+       "2            common_voice_en_34925867.mp3      0\n",
+       "3            common_voice_en_34925868.mp3      0\n",
+       "4            common_voice_en_34925869.mp3      0\n",
+       "...                                   ...    ...\n",
+       "28042  noisy_common_voice_en_36528129.wav      0\n",
+       "28043  noisy_common_voice_en_36528130.wav      0\n",
+       "28044  noisy_common_voice_en_36528131.wav      0\n",
+       "28045  noisy_common_voice_en_36528132.wav      0\n",
+       "28046  noisy_common_voice_en_36528133.wav      0\n",
+       "\n",
+       "[28047 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## rest"
+   ]
   }
  ],
  "metadata": {
