working with opensmile

--- a/GC.ipynb
+++ b/GC.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,9 @@
     "import numpy as np\n",
     "import librosa\n",
     "import matplotlib.pyplot as plt\n",
-    "import soundfile as sf"
+    "import soundfile as sf\n",
+    "import opensmile\n",
+    "import torch"
    ]
   },
   {
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,119 +136,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>path</th>\n",
-       "      <th>gender</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>common_voice_en_34925857.mp3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>common_voice_en_34925861.mp3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>common_voice_en_34925867.mp3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>common_voice_en_34925868.mp3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>common_voice_en_34925869.mp3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28042</th>\n",
-       "      <td>noisy_common_voice_en_36528129.wav</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28043</th>\n",
-       "      <td>noisy_common_voice_en_36528130.wav</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28044</th>\n",
-       "      <td>noisy_common_voice_en_36528131.wav</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28045</th>\n",
-       "      <td>noisy_common_voice_en_36528132.wav</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28046</th>\n",
-       "      <td>noisy_common_voice_en_36528133.wav</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>28047 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                     path gender\n",
-       "0            common_voice_en_34925857.mp3      0\n",
-       "1            common_voice_en_34925861.mp3      0\n",
-       "2            common_voice_en_34925867.mp3      0\n",
-       "3            common_voice_en_34925868.mp3      0\n",
-       "4            common_voice_en_34925869.mp3      0\n",
-       "...                                   ...    ...\n",
-       "28042  noisy_common_voice_en_36528129.wav      0\n",
-       "28043  noisy_common_voice_en_36528130.wav      0\n",
-       "28044  noisy_common_voice_en_36528131.wav      0\n",
-       "28045  noisy_common_voice_en_36528132.wav      0\n",
-       "28046  noisy_common_voice_en_36528133.wav      0\n",
-       "\n",
-       "[28047 rows x 2 columns]"
+       "gender\n",
+       "1    16911\n",
+       "0    11136\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filtered_df"
+    "filtered_df['gender'].value_counts()"
    ]
   },
   {
@@ -254,6 +162,158 @@
    "metadata": {},
    "source": [
     "## rest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27699"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rand = int(np.random.random()*len(filtered_df))\n",
+    "rand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'noisy_common_voice_en_36509320.wav'"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df['path'][rand]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df['gender'][rand]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "waveform, sr = librosa.load(f'{sound_dir}/{filtered_df['path'][rand]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(71442,)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "waveform.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_rate = 16000\n",
+    "waveform = librosa.resample(waveform, orig_sr=sr, target_sr=sample_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smile = opensmile.Smile(feature_set=opensmile.FeatureSet.ComParE_2016,\n",
+    "                        feature_level=opensmile.FeatureLevel.Functionals,\n",
+    "                        sampling_rate=sample_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2.118374  ,  0.25      ,  0.89912283, ..., 48.841408  ,\n",
+       "       82.55347   , 40.46855   ], dtype=float32)"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smile(waveform, sample_rate).reshape([len(smile.feature_names),])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 6373, 1)"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smile(waveform, sample_rate).shape"
    ]
   }
  ],
