--- a/GC.ipynb
+++ b/GC.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,34 @@
     "import matplotlib.pyplot as plt\n",
     "import soundfile as sf\n",
     "import opensmile\n",
-    "import torch"
+    "import torch\n",
+    "from torch.utils.data import DataLoader, Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Default Device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NVIDIA GeForce GTX 1660 Ti\n"
+     ]
+    }
+   ],
+   "source": [
+    "if torch.cuda.is_available(): print(torch.cuda.get_device_name())\n",
+    "else: print('cpu')\n",
+    "default_device = 'cuda' if torch.cuda.is_available() else 'cpu'"
    ]
   },
   {
@@ -156,6 +183,20 @@
    "source": [
     "filtered_df['gender'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataloader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
