--- a/GC.ipynb
+++ b/GC.ipynb
@@ -185,6 +185,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths, labels = np.array(filtered_df['path']), np.array(filtered_df['gender'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -193,10 +202,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class CustomLoader(Dataset):\n",
+    "    \n",
+    "    def __init__(self, paths, labels, data_dir, target_sr):\n",
+    "        self.paths = paths\n",
+    "        self.labels = labels\n",
+    "        self.dir = data_dir\n",
+    "        self.target_sr = target_sr\n",
+    "        self.smile = opensmile.Smile(feature_set=opensmile.FeatureSet.ComParE_2016,\n",
+    "                                     feature_level=opensmile.FeatureLevel.Functionals,\n",
+    "                                     sampling_rate=target_sr)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.paths)\n",
+    "    \n",
+    "    def __getitem__(self, index) :\n",
+    "\n",
+    "        waveform, sr = librosa.load(f'{self.dir}/{self.paths[index]}')\n",
+    "        waveform = librosa.resample(waveform, orig_sr=sr, target_sr=self.target_sr)\n",
+    "\n",
+    "        wave = self.smile(waveform, self.target_sr).reshape([len(self.smile.feature_names),])\n",
+    "        label = self.labels[index]\n",
+    "\n",
+    "        return wave, label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = CustomLoader(paths=paths, labels=labels, data_dir=sound_dir, target_sr=16000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader = DataLoader(dataset=t,\n",
+    "                        batch_size=8,\n",
+    "                        shuffle=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,16 +260,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "27699"
+       "16108"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
