creating train and valid loaders

--- a/GC.ipynb
+++ b/GC.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,8 @@
     "import soundfile as sf\n",
     "import opensmile\n",
     "import torch\n",
-    "from torch.utils.data import DataLoader, Dataset"
+    "from torch.utils.data import DataLoader, Dataset\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -229,6 +230,33 @@
     "        label = self.labels[index]\n",
     "\n",
     "        return wave, label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(paths, \n",
+    "                                                    labels, \n",
+    "                                                    test_size=0.2, \n",
+    "                                                    shuffle=True,\n",
+    "                                                    stratify=labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 32\n",
+    "target_sr = 16000\n",
+    "train_set = CustomLoader(paths=X_train, labels=y_train, data_dir=sound_dir, target_sr=target_sr)\n",
+    "valid_set = CustomLoader(paths=X_test, labels=y_test, data_dir=sound_dir, target_sr=target_sr)\n",
+    "train_loader = DataLoader(dataset=train_set, batch_size=batch_size, shuffle=True)\n",
+    "valid_loader = DataLoader(dataset=valid_set, batch_size=batch_size, shuffle=True)"
    ]
   },
   {
