--- a/GC.ipynb
+++ b/GC.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,10 @@
     "import soundfile as sf\n",
     "import opensmile\n",
     "import torch\n",
+    "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader, Dataset\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from torchinfo import summary"
    ]
   },
   {
@@ -247,16 +249,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 32\n",
+    "batch_size = 128\n",
     "target_sr = 16000\n",
     "train_set = CustomLoader(paths=X_train, labels=y_train, data_dir=sound_dir, target_sr=target_sr)\n",
     "valid_set = CustomLoader(paths=X_test, labels=y_test, data_dir=sound_dir, target_sr=target_sr)\n",
     "train_loader = DataLoader(dataset=train_set, batch_size=batch_size, shuffle=True)\n",
     "valid_loader = DataLoader(dataset=valid_set, batch_size=batch_size, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MLP(nn.Module):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super(MLP, self).__init__()\n",
+    "        self.fc1 = nn.Linear(in_features=6373, out_features=2048)\n",
+    "        self.fc2 = nn.Linear(in_features=2048, out_features=1024)\n",
+    "        self.fc3 = nn.Linear(in_features=1024, out_features=512)\n",
+    "        self.fc4 = nn.Linear(in_features=512, out_features=256)\n",
+    "        self.fc5 = nn.Linear(in_features=256, out_features=64)\n",
+    "        self.fc6 = nn.Linear(in_features=64, out_features=1)\n",
+    "        self.sigmoid = nn.Sigmoid() # For binary classification\n",
+    "        self.relu = nn.ReLU()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.fc1(x)\n",
+    "        x = self.relu(x)\n",
+    "        x = self.fc2(x)\n",
+    "        x = self.relu(x)\n",
+    "        x = self.fc3(x)\n",
+    "        x = self.relu(x)\n",
+    "        x = self.fc4(x)\n",
+    "        x = self.relu(x)\n",
+    "        x = self.fc5(x)\n",
+    "        x = self.relu(x)\n",
+    "        x = self.fc6(x)\n",
+    "        x = self.sigmoid(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlp = MLP().to(default_device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "==========================================================================================\n",
+       "Layer (type:depth-idx)                   Output Shape              Param #\n",
+       "==========================================================================================\n",
+       "MLP                                      [128, 1]                  --\n",
+       "├─Linear: 1-1                            [128, 2048]               13,053,952\n",
+       "├─ReLU: 1-2                              [128, 2048]               --\n",
+       "├─Linear: 1-3                            [128, 1024]               2,098,176\n",
+       "├─ReLU: 1-4                              [128, 1024]               --\n",
+       "├─Linear: 1-5                            [128, 512]                524,800\n",
+       "├─ReLU: 1-6                              [128, 512]                --\n",
+       "├─Linear: 1-7                            [128, 256]                131,328\n",
+       "├─ReLU: 1-8                              [128, 256]                --\n",
+       "├─Linear: 1-9                            [128, 64]                 16,448\n",
+       "├─ReLU: 1-10                             [128, 64]                 --\n",
+       "├─Linear: 1-11                           [128, 1]                  65\n",
+       "├─Sigmoid: 1-12                          [128, 1]                  --\n",
+       "==========================================================================================\n",
+       "Total params: 15,824,769\n",
+       "Trainable params: 15,824,769\n",
+       "Non-trainable params: 0\n",
+       "Total mult-adds (Units.GIGABYTES): 2.03\n",
+       "==========================================================================================\n",
+       "Input size (MB): 3.26\n",
+       "Forward/backward pass size (MB): 4.00\n",
+       "Params size (MB): 63.30\n",
+       "Estimated Total Size (MB): 70.56\n",
+       "=========================================================================================="
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary(mlp, [batch_size, 6373])"
    ]
   },
   {
