write training loop

--- a/GC.ipynb
+++ b/GC.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,11 @@
     "import opensmile\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
     "from torch.utils.data import DataLoader, Dataset\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from torchinfo import summary"
+    "from torchinfo import summary\n",
+    "import tqdm"
    ]
   },
   {
@@ -270,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,8 +285,8 @@
     "        self.fc3 = nn.Linear(in_features=1024, out_features=512)\n",
     "        self.fc4 = nn.Linear(in_features=512, out_features=256)\n",
     "        self.fc5 = nn.Linear(in_features=256, out_features=64)\n",
-    "        self.fc6 = nn.Linear(in_features=64, out_features=1)\n",
-    "        self.sigmoid = nn.Sigmoid() # For binary classification\n",
+    "        self.fc6 = nn.Linear(in_features=64, out_features=2)\n",
+    "        self.softmax = nn.Softmax(dim=-1) # For binary classification\n",
     "        self.relu = nn.ReLU()\n",
     "\n",
     "    def forward(self, x):\n",
@@ -299,13 +301,13 @@
     "        x = self.fc5(x)\n",
     "        x = self.relu(x)\n",
     "        x = self.fc6(x)\n",
-    "        x = self.sigmoid(x)\n",
+    "        x = self.softmax(x)\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +325,7 @@
        "==========================================================================================\n",
        "Layer (type:depth-idx)                   Output Shape              Param #\n",
        "==========================================================================================\n",
-       "MLP                                      [128, 1]                  --\n",
+       "MLP                                      [128, 2]                  --\n",
        "├─Linear: 1-1                            [128, 2048]               13,053,952\n",
        "├─ReLU: 1-2                              [128, 2048]               --\n",
        "├─Linear: 1-3                            [128, 1024]               2,098,176\n",
@@ -334,11 +336,11 @@
        "├─ReLU: 1-8                              [128, 256]                --\n",
        "├─Linear: 1-9                            [128, 64]                 16,448\n",
        "├─ReLU: 1-10                             [128, 64]                 --\n",
-       "├─Linear: 1-11                           [128, 1]                  65\n",
-       "├─Sigmoid: 1-12                          [128, 1]                  --\n",
+       "├─Linear: 1-11                           [128, 2]                  130\n",
+       "├─Softmax: 1-12                          [128, 2]                  --\n",
        "==========================================================================================\n",
-       "Total params: 15,824,769\n",
-       "Trainable params: 15,824,769\n",
+       "Total params: 15,824,834\n",
+       "Trainable params: 15,824,834\n",
        "Non-trainable params: 0\n",
        "Total mult-adds (Units.GIGABYTES): 2.03\n",
        "==========================================================================================\n",
@@ -349,13 +351,89 @@
        "=========================================================================================="
       ]
      },
-     "execution_count": 169,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "summary(mlp, [batch_size, 6373])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hyperparameters\n",
+    "num_epochs = 100\n",
+    "learning_rate = 0.0005\n",
+    "\n",
+    "# loss function, and optimizer\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(mlp.parameters(), lr=learning_rate)\n",
+    "\n",
+    "history = { 'train_loss' : [], 'train_acc': [], 'val_loss': [], 'val_acc': []}\n",
+    "min_loss = 1e9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for epoch in range(num_epochs):\n",
+    "\n",
+    "    # training\n",
+    "    mlp.train()\n",
+    "    steps = len(train_loader)\n",
+    "    total_loss, acc, count = 0, 0, 0\n",
+    "    for features, labels in tqdm(train_loader, total=steps, desc=f'Epoch {epoch}', leave=False):\n",
+    "        features, labels = features.to(default_device), labels.to(default_device)\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = mlp(features)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        total_loss+=loss\n",
+    "        predicted_value = torch.argmax(outputs, 1)\n",
+    "        acc+=(predicted_value==labels).sum()\n",
+    "        count+=len(labels)\n",
+    "    tl,ta = total_loss.item()/count, acc.item()/count\n",
+    "    history['train_loss'].append(tl)\n",
+    "    history['train_acc'].append(ta)\n",
+    "\n",
+    "    # validation\n",
+    "    mlp.eval()\n",
+    "    steps = len(valid_loader)\n",
+    "    total_loss, acc, count = 0, 0, 0\n",
+    "    for features, labels in tqdm(valid_loader, total=steps, desc=f'Epoch {epoch}', leave=False):\n",
+    "        with torch.no_grad():\n",
+    "            features, labels = features.to(default_device), labels.to(default_device)\n",
+    "            outputs = mlp(features)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "            total_loss+=loss\n",
+    "            predicted_value = torch.argmax(outputs, 1)\n",
+    "            acc+=(predicted_value==labels).sum()\n",
+    "            count+=len(labels)\n",
+    "    vl,va = total_loss.item()/count, acc.item()/count\n",
+    "    history['valid_loss'].append(tl)\n",
+    "    history['valid_acc'].append(ta)\n",
+    "\n",
+    "    # save net parameters\n",
+    "    if vl <= min_loss:\n",
+    "        torch.save(mlp.state_dict(), 'best_net.pth')\n",
+    "        min_loss = vl\n",
+    "    torch.save(mlp.state_dict(), 'last_epoch_net.pth')"
    ]
   },
   {
