optimizing model, change featureset method in opensmile and add weight decay and ready for training

--- a/GC.ipynb
+++ b/GC.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
     "        self.labels = labels\n",
     "        self.dir = data_dir\n",
     "        self.target_sr = target_sr\n",
-    "        self.smile = opensmile.Smile(feature_set=opensmile.FeatureSet.ComParE_2016,\n",
+    "        self.smile = opensmile.Smile(feature_set=opensmile.FeatureSet.emobase,\n",
     "                                     feature_level=opensmile.FeatureLevel.Functionals,\n",
     "                                     sampling_rate=target_sr)\n",
     "\n",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,11 +251,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 32\n",
+    "batch_size = 64\n",
     "target_sr = 16000\n",
     "train_set = CustomLoader(paths=X_train, labels=y_train, data_dir=sound_dir, target_sr=target_sr)\n",
     "valid_set = CustomLoader(paths=X_test, labels=y_test, data_dir=sound_dir, target_sr=target_sr)\n",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,12 +280,12 @@
     "\n",
     "    def __init__(self):\n",
     "        super(MLP, self).__init__()\n",
-    "        self.fc1 = nn.Linear(in_features=6373, out_features=2048)\n",
-    "        self.fc2 = nn.Linear(in_features=2048, out_features=1024)\n",
-    "        self.fc3 = nn.Linear(in_features=1024, out_features=512)\n",
-    "        self.fc4 = nn.Linear(in_features=512, out_features=256)\n",
-    "        self.fc5 = nn.Linear(in_features=256, out_features=64)\n",
-    "        self.fc6 = nn.Linear(in_features=64, out_features=2)\n",
+    "        self.fc1 = nn.Linear(in_features=988, out_features=512)\n",
+    "        self.fc2 = nn.Linear(in_features=512, out_features=256)\n",
+    "        self.fc3 = nn.Linear(in_features=256, out_features=128)\n",
+    "        self.fc4 = nn.Linear(in_features=128, out_features=64)\n",
+    "        self.fc5 = nn.Linear(in_features=64, out_features=32)\n",
+    "        self.fc6 = nn.Linear(in_features=32, out_features=2)\n",
     "        self.softmax = nn.Softmax(dim=-1) # For binary classification\n",
     "        self.relu = nn.ReLU()\n",
     "\n",
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
@@ -326,38 +326,38 @@
        "Layer (type:depth-idx)                   Output Shape              Param #\n",
        "==========================================================================================\n",
        "MLP                                      [32, 2]                   --\n",
-       "├─Linear: 1-1                            [32, 2048]                13,053,952\n",
-       "├─ReLU: 1-2                              [32, 2048]                --\n",
-       "├─Linear: 1-3                            [32, 1024]                2,098,176\n",
-       "├─ReLU: 1-4                              [32, 1024]                --\n",
-       "├─Linear: 1-5                            [32, 512]                 524,800\n",
-       "├─ReLU: 1-6                              [32, 512]                 --\n",
-       "├─Linear: 1-7                            [32, 256]                 131,328\n",
-       "├─ReLU: 1-8                              [32, 256]                 --\n",
-       "├─Linear: 1-9                            [32, 64]                  16,448\n",
-       "├─ReLU: 1-10                             [32, 64]                  --\n",
-       "├─Linear: 1-11                           [32, 2]                   130\n",
+       "├─Linear: 1-1                            [32, 512]                 506,368\n",
+       "├─ReLU: 1-2                              [32, 512]                 --\n",
+       "├─Linear: 1-3                            [32, 256]                 131,328\n",
+       "├─ReLU: 1-4                              [32, 256]                 --\n",
+       "├─Linear: 1-5                            [32, 128]                 32,896\n",
+       "├─ReLU: 1-6                              [32, 128]                 --\n",
+       "├─Linear: 1-7                            [32, 64]                  8,256\n",
+       "├─ReLU: 1-8                              [32, 64]                  --\n",
+       "├─Linear: 1-9                            [32, 32]                  2,080\n",
+       "├─ReLU: 1-10                             [32, 32]                  --\n",
+       "├─Linear: 1-11                           [32, 2]                   66\n",
        "├─Softmax: 1-12                          [32, 2]                   --\n",
        "==========================================================================================\n",
-       "Total params: 15,824,834\n",
-       "Trainable params: 15,824,834\n",
+       "Total params: 680,994\n",
+       "Trainable params: 680,994\n",
        "Non-trainable params: 0\n",
-       "Total mult-adds (Units.MEGABYTES): 506.39\n",
+       "Total mult-adds (Units.MEGABYTES): 21.79\n",
        "==========================================================================================\n",
-       "Input size (MB): 0.82\n",
-       "Forward/backward pass size (MB): 1.00\n",
-       "Params size (MB): 63.30\n",
-       "Estimated Total Size (MB): 65.12\n",
+       "Input size (MB): 0.13\n",
+       "Forward/backward pass size (MB): 0.25\n",
+       "Params size (MB): 2.72\n",
+       "Estimated Total Size (MB): 3.10\n",
        "=========================================================================================="
       ]
      },
-     "execution_count": 302,
+     "execution_count": 356,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "summary(mlp, [batch_size, 6373])"
+    "summary(mlp, [batch_size, 988])"
    ]
   },
   {
@@ -369,17 +369,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Hyperparameters\n",
-    "num_epochs = 30\n",
-    "learning_rate = 0.0005\n",
+    "num_epochs = 50\n",
+    "learning_rate = 0.001\n",
+    "weight_decay = 0.001\n",
     "\n",
     "# loss function, and optimizer\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(mlp.parameters(), lr=learning_rate)\n",
+    "optimizer = optim.Adam(mlp.parameters(), lr=learning_rate, weight_decay=weight_decay)\n",
     "\n",
     "history = { 'train_loss' : [], 'train_acc': [], 'val_loss': [], 'val_acc': []}\n",
     "min_loss = 1e9"
@@ -405,7 +406,7 @@
     "    mlp.train()\n",
     "    steps = len(train_loader)\n",
     "    total_loss, acc, count = 0, 0, 0\n",
-    "    for features, labels in tqdm(train_loader, total=steps, desc=f'Epoch {epoch}', leave=False):\n",
+    "    for features, labels in tqdm(train_loader, total=steps, desc=f'Training Epoch {epoch+1}', leave=False):\n",
     "        features, labels = features.to(default_device), labels.to(default_device)\n",
     "        optimizer.zero_grad()\n",
     "        outputs = mlp(features)\n",
@@ -424,7 +425,7 @@
     "    mlp.eval()\n",
     "    steps = len(valid_loader)\n",
     "    total_loss, acc, count = 0, 0, 0\n",
-    "    for features, labels in tqdm(valid_loader, total=steps, desc=f'Epoch {epoch}', leave=False):\n",
+    "    for features, labels in tqdm(valid_loader, total=steps, desc=f'Validating Epoch {epoch+1}', leave=False):\n",
     "        with torch.no_grad():\n",
     "            features, labels = features.to(default_device), labels.to(default_device)\n",
     "            outputs = mlp(features)\n",
@@ -441,7 +442,9 @@
     "    if vl <= min_loss:\n",
     "        torch.save(mlp.state_dict(), 'best_net.pth')\n",
     "        min_loss = vl\n",
-    "    torch.save(mlp.state_dict(), 'last_epoch_net.pth')"
+    "    torch.save(mlp.state_dict(), 'last_epoch_net.pth')\n",
+    "\n",
+    "    print(f'Epoch {epoch+1:3} / {num_epochs} :  Train Loss: {tl:.8f}, Valid Loss: {vl:.8f}, Train acc: {ta:.8f}, Valid acc: {va:.8f}')"
    ]
   },
   {
@@ -490,6 +493,57 @@
     "plt.legend()\n",
     "plt.grid()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = iter(valid_loader).__next__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1,\n",
+       "        1, 1, 1, 1, 0, 0, 1, 0])"
+      ]
+     },
+     "execution_count": 316,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "        1, 1, 1, 1, 1, 1, 1, 1], device='cuda:0')"
+      ]
+     },
+     "execution_count": 322,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.argmax(mlp(a[0].to(default_device)),1)"
    ]
   },
   {
