failed traning try

--- a/GC.ipynb
+++ b/GC.ipynb
@@ -388,14 +388,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                    \r"
+      "Training Epoch 1:  31%|███       | 109/351 [07:00<16:20,  4.05s/it]"
      ]
     }
    ],
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
