save df  as a csv file

--- a/GC.ipynb
+++ b/GC.ipynb
@@ -262,6 +262,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_df.to_csv('features_df.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_df = pd.read_csv('features_df.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
