--- a/GC.ipynb
+++ b/GC.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "from torch.utils.data import DataLoader, Dataset\n",
     "from sklearn.model_selection import train_test_split\n",
     "from torchinfo import summary\n",
@@ -283,47 +284,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataloader"
+    "## Normalization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CustomLoader(Dataset):\n",
-    "    \n",
-    "    def __init__(self, paths, labels, data_dir, target_sr):\n",
-    "        self.paths = paths\n",
-    "        self.labels = labels\n",
-    "        self.dir = data_dir\n",
-    "        self.target_sr = target_sr\n",
-    "        self.smile = opensmile.Smile(feature_set=opensmile.FeatureSet.emobase,\n",
-    "                                     feature_level=opensmile.FeatureLevel.Functionals,\n",
-    "                                     sampling_rate=target_sr)\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.paths)\n",
-    "    \n",
-    "    def __getitem__(self, index) :\n",
-    "\n",
-    "        waveform, sr = librosa.load(f'{self.dir}/{self.paths[index]}')\n",
-    "        waveform = librosa.resample(waveform, orig_sr=sr, target_sr=self.target_sr)\n",
-    "\n",
-    "        wave = self.smile(waveform, self.target_sr).reshape([len(self.smile.feature_names),])\n",
-    "        label = self.labels[index]\n",
-    "\n",
-    "        return wave, label"
+    "features = np.array(features_df.drop(columns='gender'))\n",
+    "labels = np.array(features_df['gender'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(paths, \n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, \n",
     "                                                    labels, \n",
     "                                                    test_size=0.2, \n",
     "                                                    shuffle=True,\n",
@@ -332,16 +312,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = MinMaxScaler()\n",
+    "scaler.fit(X_train)\n",
+    "\n",
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataloader"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataloader for unseen data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 357,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class CustomLoader(Dataset):\n",
+    "    \n",
+    "#     def __init__(self, paths, labels, data_dir, target_sr):\n",
+    "#         self.paths = paths\n",
+    "#         self.labels = labels\n",
+    "#         self.dir = data_dir\n",
+    "#         self.target_sr = target_sr\n",
+    "#         self.smile = opensmile.Smile(feature_set=opensmile.FeatureSet.emobase,\n",
+    "#                                      feature_level=opensmile.FeatureLevel.Functionals,\n",
+    "#                                      sampling_rate=target_sr)\n",
+    "\n",
+    "#     def __len__(self):\n",
+    "#         return len(self.paths)\n",
+    "    \n",
+    "#     def __getitem__(self, index) :\n",
+    "\n",
+    "#         waveform, sr = librosa.load(f'{self.dir}/{self.paths[index]}')\n",
+    "#         waveform = librosa.resample(waveform, orig_sr=sr, target_sr=self.target_sr)\n",
+    "\n",
+    "#         wave = self.smile(waveform, self.target_sr).reshape([len(self.smile.feature_names),])\n",
+    "#         label = self.labels[index]\n",
+    "\n",
+    "#         return wave, label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 361,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X_train, X_test, y_train, y_test = train_test_split(paths, \n",
+    "#                                                     labels, \n",
+    "#                                                     test_size=0.2, \n",
+    "#                                                     shuffle=True,\n",
+    "#                                                     stratify=labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 64\n",
-    "target_sr = 16000\n",
-    "train_set = CustomLoader(paths=X_train, labels=y_train, data_dir=sound_dir, target_sr=target_sr)\n",
-    "valid_set = CustomLoader(paths=X_test, labels=y_test, data_dir=sound_dir, target_sr=target_sr)\n",
-    "train_loader = DataLoader(dataset=train_set, batch_size=batch_size, shuffle=True)\n",
-    "valid_loader = DataLoader(dataset=valid_set, batch_size=batch_size, shuffle=True)"
+    "# batch_size = 64\n",
+    "# target_sr = 16000\n",
+    "# train_set = CustomLoader(paths=X_train, labels=y_train, data_dir=sound_dir, target_sr=target_sr)\n",
+    "# valid_set = CustomLoader(paths=X_test, labels=y_test, data_dir=sound_dir, target_sr=target_sr)\n",
+    "# train_loader = DataLoader(dataset=train_set, batch_size=batch_size, shuffle=True)\n",
+    "# valid_loader = DataLoader(dataset=valid_set, batch_size=batch_size, shuffle=True)"
    ]
   },
   {
