ready train and valid loader

--- a/GC.ipynb
+++ b/GC.ipynb
@@ -331,6 +331,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomLoader(Dataset):\n",
+    "\n",
+    "    def __init__(self, features, labels):\n",
+    "        self.features = features\n",
+    "        self.labels = labels\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.features)\n",
+    "    \n",
+    "    def __getitem__(self, index):\n",
+    "        X = self.features[index]\n",
+    "        Y = self.labels[index]\n",
+    "        return X, Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 64\n",
+    "train_set = CustomLoader(features=X_train, labels=y_train)\n",
+    "valid_set = CustomLoader(features=X_test, labels=y_test)\n",
+    "train_loader = DataLoader(dataset=train_set, batch_size=batch_size, shuffle=True)\n",
+    "valid_loader = DataLoader(dataset=valid_set, batch_size=batch_size, shuffle=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
