save scaler parameter

--- a/GC.ipynb
+++ b/GC.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,7 @@
     "import matplotlib.pyplot as plt\n",
     "import soundfile as sf\n",
     "import opensmile\n",
+    "import joblib\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
@@ -323,6 +324,35 @@
     "\n",
     "X_train_scaled = scaler.transform(X_train)\n",
     "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['minmax_scaler.pkl']"
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(scaler, 'minmax_scaler.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = joblib.load('minmax_scaler.pkl')"
    ]
   },
   {
